<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/sign_up_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/back1"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/user" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/name">

    </EditText>


    <EditText
        android:id="@+id/user_account"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/eamil"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/user_telephone_number"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/user_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/phoneNum" />

    <Button
        android:id="@+id/delete_summit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/user_telephone_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/sign_button_up_background"
        android:text="@string/delete"
        android:textColor="#FFFFFF" />


</RelativeLayout>