<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/sign_up_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/back1" />

    <ImageView
        android:id="@+id/user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:src="@drawable/user" />

    <LinearLayout
        android:id="@+id/cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/name_user"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_below="@id/user"
            android:buttonTint="#B39978"
            android:checked="true"
            android:text="@string/name" />

        <CheckBox
            android:id="@+id/telephone_number_user"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/user"
            android:buttonTint="#B39978"
            android:text="@string/phoneNum" />

    </LinearLayout>

    <EditText
        android:id="@+id/user_account"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/cb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/eamil"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/user_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/name">

    </EditText>


    <EditText
        android:id="@+id/user_telephone_number"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/phoneNum"
        android:inputType="number" />

    <Button
        android:id="@+id/update_summit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/user_telephone_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/sign_button_up_background"
        android:text="@string/update"
        android:textColor="#FFFFFF" />


</RelativeLayout>