<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/intendant_setting">

    <TextView
        android:id="@+id/car_number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ly_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/car_number"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/car_position"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/out_location"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            tools:ignore="DuplicateIds" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_in_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ly_location"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/in_time"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/add_time"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/out_in_time"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            tools:ignore="DuplicateIds" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ly_expire_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ly_in_time"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expire_time"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/expire_time"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/out_expire_time"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            tools:ignore="DuplicateIds" />
    </LinearLayout>


</RelativeLayout>